2019-11-15 belangeo <belangeo@gmail.com>

    * Added examples about how to use OSC protocol with pyo.

2019-11-12 belangeo <belangeo@gmail.com>

    * Added utilities examples.

2019-11-11 belangeo <belangeo@gmail.com>

    * Added events examples.

2019-11-05 belangeo <belangeo@gmail.com>

    * Added the first version of the Events framework.

2019-10-22 belangeo <belangeo@gmail.com>

    * Fixed tkinter font size on MacOS (fixed issue #163).

2019-10-14 belangeo <belangeo@gmail.com>

    * Added setChannelNames(names) method to Spectrum and Scope objects.

2019-10-10 belangeo <belangeo@gmail.com>

    * Fixed segfault when CallAfter's callback results in deleting itself
      (its stop method was then called on a deallocated object).

2019-09-30 belangeo <belangeo@gmail.com>

    * Expr API: constants (pi, twopi, e, sr) can be used without braces.

2019-09-29 belangeo <belangeo@gmail.com>

    * Expr API: Expr now can generate multiple output signals.

2019-09-29 belangeo <belangeo@gmail.com>

    * Expr API: Expr now can handle multiple input sources.

2019-09-28 belangeo <belangeo@gmail.com>

    * Expr API: let statment can now store a complex number.

2019-09-19 belangeo <belangeo@gmail.com>

    * Added a DC blocker inside the feedback loop of Harmonizer object.

2019-09-11 belangeo <belangeo@gmail.com>

    * Added new object: Binaural, 3D stereo spatialization.

2019-09-11 belangeo <belangeo@gmail.com>

    * Added a clear() method to Mixer object to delete all inputs at once.

2019-09-09 belangeo <belangeo@gmail.com>

    * Fixed setting value of ControlSlider from national keyboard layout.

2019-09-03 belangeo <belangeo@gmail.com>

    * Audio server falls back to playback-only mode if jack server has no input ports.

2019-07-11 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.0.

2019-06-12 belangeo <belangeo@gmail.com>

    * EPyo: Fix search ctrl behaviour in the documentation window.

2019-06-05 belangeo <belangeo@gmail.com>
